# privacy-health-ledger

./: .gitignore  Cargo.toml  LICENSE  README.md  build.yml
backend/: Cargo.toml
backend/src/: api.rs  dataset.rs  db.rs  errors.rs  main.rs  models.rs  state.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
zk-proofs/: Cargo.toml
zk-proofs/src/: circuit.rs  constants.rs  groth16.rs  lib.rs  types.rs
