[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5"
ark-crypto-primitives = { version = "0.5", default-features = false, features = ["std", "sponge"] }
ark-serialize = "0.5"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

zk-proofs = { path = "../zk-proofs" }
