[package]
name = "zk-proofs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5"
ark-crypto-primitives = { version = "0.5", default-features = false, features = ["std", "r1cs", "sponge"] }
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-r1cs-std = { version = "0.5", default-features = false, features = ["std"] }
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
